tests/errors/semantic/blocking/NUMPY_WHERE_SINGLE_ARGUMENT.py
from numpy import where
arr = zeros(10)
a = where(arr == 0)

